<resources>
    <string name="app_name">My Marketplace</string>
    <string name="title_activity_login">My Marketplace Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="warning_invalid_credential">Invalid username/password</string>
    <string name="warning_empty_credential">%1$s cannot be empty.</string>
    <string name="listViewText">Hi, </string>
    <string name="welcomeToMarket">Welcome to MyMarketplace</string>
    <string name="happybrowsing">! Suggested for you</string>

    <!--    ItemInfo Strings-->
    <string name="singleItem">Display Single Item Info</string>
    <string name="itemImageViewDescription">An image of the item.</string>
    <string name="CartButton">Add to cart</string>
    <string name="LearnMoreSeller">Learn more about seller</string>
    <string name="ItemDescription">About item</string>
    <string name="ItemPrice">$12.00</string>
    <string name="ItemStock">5 available</string>
    <string name="ItemReviews">No reviews yet.</string>
    <string name="ScamWarningTitle">Warning: Possible scam</string>
    <string name="ScamWarningMessage">Our systems have flagged this product as a possible scam. Proceed with caution.</string>
    <string name="Spinnerdescription">Select the filter</string>
    <string name="SearchAutofill">Search</string>
    <string name="SpinnerText">Sort by</string>
    <string name="SearchButtonText">Search</string>
    <string name="ClearButtonText">Clear</string>
    <string name="UserImageDescription">The users profile photo</string>



    <!--    SellerInfo String-->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_speakable_text">Map showing the store location</string>
    <string name="SellerName"></string>
    <string name="SellerAddress"></string>


</resources>